fix logo alignment on scriptureforge pages
Former-commit-id: 98bf7a449fe6a527765c9660e0928996d70d5713

--- a/src/css/sf.css
+++ b/src/css/sf.css
@@ -643,6 +643,14 @@ p.applicationContent {
 	padding: .7em;
 }
 
+/* Application Styles */
+/* Header offset for logo */
+div.content h1 {
+	margin-left: 132px;
+	margin-top: 24px;
+	margin-bottom: 24px;
+}
+
 .banner {
 	padding: 30px 0 30px 0;
 }
